--- a/solinvictus/plotdata/templates/plotdata/index.html
+++ b/solinvictus/plotdata/templates/plotdata/index.html
@@ -1,71 +1,53 @@
 
-{% load static %}
+{% extends 'plotdata/base01.html' %}
+{% load django_bootstrap5 %}
 
-{% load recursive_helper %}
+{% block stlylesheets %}
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+  crossorigin=""/>
+{% endblock %}
 
-<style>
-  .json-table {
-    border-collapse: collapse;
-  }
+{% block scripts %}
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+crossorigin="">
+</script>
+{% endblock %}
 
-  .json-table td,
-  .json-table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
+{% block title %}
+SolInvictus
+{% endblock %}
 
-  .json-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+{% block content %}
 
-  .json-table tr:hover {
-    background-color: #ddd;
-  }
-</style>
-
-
-
-<html>
-  <head>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-        crossorigin="">
-    </script>
-    <script>
-      function handlePaste(event) {
-        // Get the pasted content
-        var clipboardData = event.clipboardData || window.clipboardData;
-        //var pastedData = clipboardData.getData('Text');
-        var pastedData = clipboardData;
-        // Do something with the pasted data
-      }
-    </script>
-  </head>
-  <body>
-    <legend><h1> Select position on map</h1></legend>
-    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-    <h4 id="loc_address">{{ geolocation.address }}</h4>   
+<legend><h1> Select position on map</h1></legend>
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+<h4 id="loc_address">{{ location.loc_description_text }}</h4>   
+<div class="row">
+  
+  <div class="col">
     {{ map_html|safe}}
     
-    <form id="frm2" action="{% url 'plotdata:getLocation' %}" method="post">
+    
+    
+  </div>
+
+  <div class="col">
+    <form id="frm2" action="{% url 'plotdata:getLocation' %}" method="post" class="form">
       {% csrf_token %}
       
-      <fieldset>
-      <input type="input" id="latitude" name="latitude" value={{geolocation.latitude}}>
-      <input type="input" id="longitude" name="longitude" value={{geolocation.longitude}}>
-      </fieldset>
       
-    <input type="submit" value="Get Results">
+      {% bootstrap_form localization_form layout='inline' %}
+      {% bootstrap_button button_type="submit" content="Get Results" %}
+      
+    </form>
+    
     <h6>PVDATA</h6>
     {% if pvdata %}
    
-    {% block content %}
-    <table class="json-table">
+    <table class="class="table table-striped"">
       {% for item in pvdata %}
       <thead>
         <tr>
@@ -83,10 +65,13 @@
       </tbody>
       {% endfor %}
     </table>
-    {% endblock %}
+   
       
     {% endif %}
-    </form>
+  </div>
+</div>
+
+{% endblock %}
        
-  </body>
-</html>
+  
+    
