--- a/solinvictus/plotdata/templates/plotdata/index.html
+++ b/solinvictus/plotdata/templates/plotdata/index.html
@@ -22,8 +22,9 @@ SolInvictus
 
 {% block content %}
 
+
 <legend><h1> Select position on map</h1></legend>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
 <h4 id="loc_address">{{ location.loc_description_text }}</h4>   
 <div class="row">
   
@@ -35,6 +36,7 @@ SolInvictus
   </div>
 
   <div class="col">
+    {% if error_message %}<h5 class="text-danger"><strong>{{ error_message }}</strong></h5>{% endif %}
     <form id="frm2" action="{% url 'plotdata:getLocation' %}" method="post" class="form">
       {% csrf_token %}
       
